- Fixed Fadi's BROKEN CSS AGAIN

--- a/Frontend/src/app/pages/dashboard/dashboard.component.css
+++ b/Frontend/src/app/pages/dashboard/dashboard.component.css
@@ -105,6 +105,7 @@
   flex-direction: column;
   align-items: stretch;
   justify-content: center;
+  background: #1e293b;
 }
 .dashboard-container {
   box-sizing: border-box;
@@ -137,8 +138,10 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  padding: 10px 0px;
   padding-right: 8.5px;
   margin-top: 23.5px;
+  background: #1e293b;
 }
 .profile-card {
   display: flex;
@@ -208,14 +211,7 @@
   width: 100%;
   margin-top: 15px;
 }
-.course-card-container {
-  box-sizing: border-box;
-  flex: 1 1 0;
-  padding-right: 22.5px;
-  padding-left: 22.5px;
-  background: #f9fafb;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.15);
-}
+
 .course-info-container1 {
   box-sizing: border-box;
   display: flex;
